k8s/statefulSet.yaml
# ────────────────────────────────────────────────────────────────────────────────
# Backend
# ────────────────────────────────────────────────────────────────────────────────

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: backend
  name: backend
spec:
  serviceName: "backend"
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mailer-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
            - containerPort: 2525
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3030
              httpHeaders:
                - name: Origin
                  value: http://mailer.webuxlab.com
            initialDelaySeconds: 30
            periodSeconds: 5

# ────────────────────────────────────────────────────────────────────────────────
# Frontend
# ────────────────────────────────────────────────────────────────────────────────

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  serviceName: "frontend"
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: mailer-frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/log/nginx/
              name: mailer-frontend-logs
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: mailer-frontend-logs
      spec:
        accessModes: ["ReadWriteMany"]
        resources:
          requests:
            storage: 5Gi
        selector:
          matchLabels:
            name: mailer-frontend-log
