k8s/service.yaml
# ────────────────────────────────────────────────────────────────────────────────
# Backend
# ────────────────────────────────────────────────────────────────────────────────

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  clusterIP: None
  ports:
    - port: 3030
      name: api_endpoint
    - port: 2525
      name: fake_smtp
  selector:
    app: backend

# ────────────────────────────────────────────────────────────────────────────────
# Frontend
# ────────────────────────────────────────────────────────────────────────────────

---
## Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  clusterIP: None
  ports:
    - port: 80
      name: http
  selector:
    app: frontend
